--- a/back/todo-app/app/views/templates/layout.html
+++ b/back/todo-app/app/views/templates/layout.html
@@ -11,6 +11,7 @@
 </head>
 
 <body>
+    {{ template "navbar"}}
     <div class="container text-center">
         {{template "content" .}}
     </div>
